--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,36 +3,36 @@
 @tailwind utilities;
 
 body {
-  font-family: 'PT Sans', sans-serif;
+  font-family: 'Poppins', sans-serif;
 }
 
 @layer base {
   :root {
-    --background: 210 20% 98%;
-    --foreground: 210 7% 15%;
+    --background: 220 20% 98%;
+    --foreground: 222.2 47.4% 11.2%;
     --card: 0 0% 100%;
-    --card-foreground: 210 7% 15%;
+    --card-foreground: 222.2 47.4% 11.2%;
     --popover: 0 0% 100%;
-    --popover-foreground: 210 7% 15%;
-    --primary: 24 9.8% 83.7%;
-    --primary-foreground: 210 7% 15%;
-    --secondary: 210 20% 94%;
-    --secondary-foreground: 210 7% 15%;
-    --muted: 210 20% 94%;
+    --popover-foreground: 222.2 47.4% 11.2%;
+    --primary: 262 88% 66%;
+    --primary-foreground: 0 0% 100%;
+    --secondary: 210 40% 96.1%;
+    --secondary-foreground: 222.2 47.4% 11.2%;
+    --muted: 210 40% 96.1%;
     --muted-foreground: 215.4 16.3% 46.9%;
-    --accent: 45 93% 47%;
+    --accent: 32 98% 55%;
     --accent-foreground: 0 0% 100%;
     --destructive: 0 84.2% 60.2%;
     --destructive-foreground: 0 0% 100%;
     --border: 214.3 31.8% 91.4%;
     --input: 214.3 31.8% 91.4%;
-    --ring: 24.6 95% 53.1%;
+    --ring: 262 88% 66%;
     --chart-1: 12 76% 61%;
     --chart-2: 173 58% 39%;
     --chart-3: 197 37% 24%;
     --chart-4: 43 74% 66%;
     --chart-5: 27 87% 67%;
-    --radius: 0.5rem;
+    --radius: 0.8rem;
     --sidebar-background: 220 15% 95%;
     --sidebar-foreground: 210 7% 15%;
     --sidebar-primary: 24 9.8% 83.7%;
@@ -44,25 +44,25 @@ body {
   }
 
   .dark {
-    --background: 210 20% 98%;
-    --foreground: 210 7% 15%;
-    --card: 0 0% 100%;
-    --card-foreground: 210 7% 15%;
-    --popover: 0 0% 100%;
-    --popover-foreground: 210 7% 15%;
-    --primary: 24 9.8% 83.7%;
-    --primary-foreground: 210 7% 15%;
-    --secondary: 210 20% 94%;
-    --secondary-foreground: 210 7% 15%;
-    --muted: 210 20% 94%;
-    --muted-foreground: 215.4 16.3% 46.9%;
-    --accent: 45 93% 47%;
+    --background: 222.2 47.4% 11.2%;
+    --foreground: 210 40% 98%;
+    --card: 222.2 47.4% 11.2%;
+    --card-foreground: 210 40% 98%;
+    --popover: 222.2 47.4% 11.2%;
+    --popover-foreground: 210 40% 98%;
+    --primary: 262 88% 66%;
+    --primary-foreground: 0 0% 100%;
+    --secondary: 217.2 32.6% 17.5%;
+    --secondary-foreground: 210 40% 98%;
+    --muted: 217.2 32.6% 17.5%;
+    --muted-foreground: 215 20.2% 65.1%;
+    --accent: 32 98% 55%;
     --accent-foreground: 0 0% 100%;
-    --destructive: 0 84.2% 60.2%;
+    --destructive: 0 62.8% 30.6%;
     --destructive-foreground: 0 0% 100%;
-    --border: 214.3 31.8% 91.4%;
-    --input: 214.3 31.8% 91.4%;
-    --ring: 24.6 95% 53.1%;
+    --border: 217.2 32.6% 17.5%;
+    --input: 217.2 32.6% 17.5%;
+    --ring: 262 88% 66%;
     --chart-1: 12 76% 61%;
     --chart-2: 173 58% 39%;
     --chart-3: 197 37% 24%;
