make a full functional analytics pages

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,6 +24,12 @@
     --input: 214.3 31.8% 91.4%;
     --ring: 142.1 76.2% 36.3%;
     --radius: 0.5rem;
+
+    --chart-1: 142.1 76.2% 36.3%;
+    --chart-2: 210 40% 96.1%;
+    --chart-3: 160 60% 45%;
+    --chart-4: 40 90% 60%;
+    --chart-5: 280 75% 50%;
   }
 
   .dark {
@@ -46,6 +52,12 @@
     --border: 217.2 32.6% 17.5%;
     --input: 217.2 32.6% 17.5%;
     --ring: 142.1 76.2% 36.3%;
+
+    --chart-1: 142.1 76.2% 36.3%;
+    --chart-2: 217.2 32.6% 17.5%;
+    --chart-3: 160 60% 45%;
+    --chart-4: 40 90% 60%;
+    --chart-5: 280 75% 50%;
   }
 }
 
